# GIRO

./: .giro_tmp_todo.json  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ALINHAMENTO-LICENSE-SERVER-2026-01-11.md  AUDITORIA-DATABASE-BACKEND.md  AUDITORIA-PENDENCIAS-2026-01-10.md  AUDITORIA-ROADMAPS-COMPLETA-2026-01-11.md  AUDITORIA-SEGURANCA-2026-01-11.md  BACKEND_READY.md  CHANGELOG.md  CHECKLIST-FINAL-RELEASE.md  CODE_OF_CONDUCT.md  COMMIT-SUMMARY.md  CONTRIBUTING.md  DEBUG-REPORT-2026-01-26.md  DEBUG-REPORT-PRODUTOS-ENTIDADES.md  DEBUG-REPORT-SETTINGS.md  LEIA-ME-AUDITORIA.md  MOBILE-BUILD-READY.md  MOBILE-INTEGRATION-SUMMARY.md  PDV-SEARCH-IMPROVEMENTS-2026-01-26.md  PENDENCIAS-PRIORITIZADAS-2026-01-12.md  PLANO-WIZARD-ADMIN.md  PROGRESSO-TESTES-2026-01-10.md  PROGRESSO-VISUAL.txt  PROJETO-FINALIZADO.md  PROXIMAS-ACOES.md  README.md  RECOMENDACOES-TECNICAS.md  RELATORIO-TESTES-E2E-2026-01-10.md  RELEASE-GUIDE.md  RELEASE_v2.0.6.md  REPORTS-IMPLEMENTATION-COMPLETE.md  RESOLUCAO-PENDENCIAS-2026-01-10.md  RESUMO-SEGURANCA.md  SECURITY.md  SESSAO-MIGRACAO-2026-01-28.md  SETUP-SIGNING-KEYS.md  SITUACAO-REAL.md  (+17 more)
apps/desktop/src-tauri/: Cargo.toml  MIGRATION-SNAKE-CASE-COMPLETE.md  NFCE-IMPLEMENTATION-COMPLETE.md  apply_migrations.py  fix_category_manual.sql  latest.json  seed.sql  tauri.conf.json  uninstall.nsi
apps/desktop/src-tauri/.sqlx/: query-016dd6b05a4c4ff2fbafcdd5106d1999258c898bac35e788dc4086e406ee909f.json  query-0bb89d357ed9c2909d9da6907e3be4803326ec8c74a4cb99fbdc8c0c0e041aa5.json  query-0dae7ee643d2d7f310aa4efd0c6b60e7736e4859c00ec8d37f12040b0b74111e.json  query-107d104b239d7ee762f95125848380274ec8e61fe11ed720eb056cd22a543e2b.json  query-11f1816917c0d90f8b8cb1af553b78eb3554456a671745299566fb2ad6f8c636.json  query-1b728062219ca9d950af812e3881ce989b0c2b8e00dbf05101b92acc2d7e2c45.json  query-1efbc85c4c888fc4fccb591239068baee493bb2054ace381d4b9be83bd94f980.json  query-1f0c8702ff04fc8e067874dd007bf34792dfbccf20098444a9f4d9875be102fb.json  (+63 more)
apps/desktop/src-tauri/src/: error.rs  (+3 more)
giro-license-server/backend/: .railwayignore  Cargo.toml  Dockerfile  add_all_type_hints.sh  create_stubs.sh  fix_sql_types.sh  railway.toml  tarpaulin-report.html
giro-license-server/backend/.sqlx/: query-01471d2c523f77e3be403152e0582d53e13c258d767f35169365d8bea2e47af7.json  query-02a04e7992aaa12b90aa66e95c5f926ea310c9e98706d85b666cf1bfbaae81c7.json  query-0ed7b391e79f339469daaa0eb2abc3a0e3ad40add175f94505be63e353c7f427.json  query-182664253d2005114591ff4848b1e24309facbb95501a33757fd1ccfd123c47f.json  query-1cb81b3b20579f2caba0d62be88f3134b0fbe51f7a66a4b4aad4b9c0e7cf8cbe.json  query-1e6f1cbe68133c0e8d6c7445451eec002f0b2efe6e9b5fd982d40f5c85cdabe8.json  query-1ec2607499a37542b0d769c989983b175aabdfd6223932a88126027b1b7636fe.json  query-237da282e84ba2bddbcf0ffb68c950ee7a731d3f15e5af272178ae711783161d.json  query-299c583a10c3b6b5cc11d74c02b1e4d3cc4a74bbb5f666cc33d69c0d93d009bd.json  query-2b090562f32aeed8e48b869bcf48050d7673102e08b07882ad3e22ed3ef59f8a.json  query-2febb1f5cc79c6858c9c168037b037ee207eab8c96b1df320d8cb13587837d4a.json  query-2ffafefd2b748a19747a62ffa76d29498ce5bdf29e3452fe03d8f3f4b20d610e.json  query-3860623a212fd16bc9ca42ddd30994037bdb78d1be14472a78352f0474832236.json  query-39ac4db66aee1ec10f84cd50fce113d2a35772844a37d088371825a1c14bd6ef.json  query-3b586809a40f58b75253fc5835b6652db140ddca5231f10a258dcb92989b8495.json  query-3f3b147b57ff22eaa988c052a5603748cb2d7dfa5d7bed2b12ee4d29dc4b33d8.json  query-401845c1cad2cc6a8ed4652cbf7baa7c92fb033fa9704ff00177c4c159a34f94.json  query-4765df788d48b0d0013b9ffc67e599b2faee97b893b426a50526908f7b32bd6a.json  query-4bb5a87d4a6c6e5541e55460cb18283e0b073efea8f7b8e55d3bf4342b80b781.json  query-59e269551652a0e5e9edb25496282465e81949981656c1a40021d8a042e610c6.json  query-5cff1216cdc01cedf07b41b428e0754144f2467f73721f713048390d6598cbbf.json  query-5f5c614b2f0f201f0fd9e6d76cdbb953063a1cb852d4fb070b79de8cd40eb2c5.json  query-5fdbdf1a422f708a40d2a08a0e29a7282b8c5b68075709ca32a0af845ce25576.json  query-60407e160e615cd3639f275408e0e32c9a1de31809ed1381b5eaa59f3aec557f.json  query-65f5c46888528e3260d0e39e687d4933a8f42ed62dcdd19cb405875917aa4d74.json  query-686b4121ce7e419fdc72133bae79937eb780d2ea3152d63fd9c8cc68fbf462c8.json  query-6a13f62d43f6b77b508c89d02ef020b9ae83002fbba1fa61bd09572f37739328.json  query-6bdfe97e8071a29694b395ee39c3d24df11bac31781d9ca4b4891a2625147698.json  query-6cd1ad7687679bd8e1df012787dee357550ae226d8e2c3c75027947f2b99b0cf.json  query-71f767d3a2c4bcac80337a103248a0fcb780a5fd39b3557405d12f213c9dbec9.json  query-7ddfea43bff8dab4a724a566ebbdae4602ee449d9fd84e990cd686d94f9f5b86.json  query-7e27386dbb4fdd54c275e3a77de38b118048b7fc799bea8119ca29bc0035b0ac.json  query-80b6ebc74adcb6241b678fb08486cfc343a4f8cfb5f8dfeb84a5c658abbe3631.json  query-847cc7e6fcdacd05829d683e2a417723921a77b49296dbb8cf567b953686268f.json  query-887ab7097889bf25300e90368766f8ebc40f671714b01b505a7d194fc96a61b7.json  query-891d0036cffd54d0eddf095b4b14cc6eb99241b536abc03a9f223b1a0dd51fe4.json  query-89e5fdb162a1ccecdefe31f694f40a7162bbbc2b8bb33ef55a290e3d139d4f1f.json  query-90386c0b44216383402f6f4cbcc57bcdd8b77e34bf8a218609fbdad1d95a1845.json  query-927c85b510c5e8419204341e4bbfcc8c431cfc1e06a3963669b0ee30b74a4327.json  query-98a3ad54c13518b433b6b181fe69521f3798c8ad73fa1e96ff74e270709c7ba6.json  (+17 more)
giro-license-server/backend/examples/: generate_hash.rs
giro-license-server/backend/migrations/: 001_initial_schema.sql  002_add_lifetime_plan.sql  006_add_admin_profile_updated_audit.sql  20260110_create_api_keys.sql  20260114_add_mercadopago_provider.sql  20260116122404_add_license_hardware.sql  20260117_add_backups_table.sql  20260122144000_add_company_metadata.sql  20260122150000_increase_max_hardware.sql  20260123100000_normalize_emails.sql  20260124100000_add_user_roles.sql
giro-license-server/backend/scripts/: seed.sql  seed_admin.sql
giro-license-server/backend/src/: lib.rs  main.rs  state.rs
giro-license-server/backend/tests/: api_keys_test.rs  auth_test.rs  comprehensive_flow_test.rs  license_test.rs  multi_hardware_test.rs  print_hash.rs  stripe_test.rs
(+921 files in other folders)
