[package]
name = "giro-license-server"
version = "1.1.4"
edition = "2021"
authors = ["GIRO Team <dev@giro.com.br>"]
description = "License Server for GIRO Desktop - Retail Management System"
license = "Proprietary"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros", "json"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = [
  "cors",
  "compression-gzip",
  "trace",
  "request-id",
  "timeout",
] }

# Async Runtime
tokio = { version = "1.42", features = ["full"] }

# Database
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "chrono",
  "json",
  "bigdecimal",
  "rust_decimal",
  "ipnetwork",
  "migrate",
] }
ipnetwork = "0.20"

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Security
jsonwebtoken = "9.3"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

# HTTP Client (for Resend API, Stripe webhooks)
reqwest = { version = "0.12", features = [
  "json",
  "rustls-tls",
], default-features = false }

# Stripe (async) - TODO: Enable when implementing full Stripe integration
# stripe-rust = { package = "async-stripe", version = "0.41", default-features = false, features = ["runtime-tokio-hyper-rustls"] }

# HMAC for webhook signatures (used by Stripe)
# hmac = "0.12"

# Validation
validator = { version = "0.18", features = ["derive"] }

# UUID
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Decimal
rust_decimal = { version = "1.36", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
dotenvy = "0.15"

# Error handling
thiserror = "2.0"

# Utilities
base64 = "0.22"
once_cell = "1.20"
async-trait = "0.1"
anyhow = "1.0.95"
bigdecimal = { version = "0.4.10", features = ["serde"] }

# AWS S3 (for backups)
aws-config = "1.5.0"
aws-sdk-s3 = "1.17.0"

[dev-dependencies]
# Testing
tokio-test = "0.4"
wiremock = "0.6"
fake = { version = "3.0", features = ["derive", "uuid", "chrono"] }
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
