[package]
name = "mercearias-desktop"
version = "0.1.0"
description = "Sistema de gestão para pequenos e médios varejos brasileiros"
authors = ["Arkheion Corp"]
license = "MIT"
repository = "https://github.com/arkheion/mercearias"
edition = "2021"
rust-version = "1.75"

[lib]
name = "mercearias_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Hardware
serialport = "4.6"

# WebSocket (para scanner mobile)
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
dirs = "5.0"

# Crypto (para backup)
aes-gcm = "0.10"
sha2 = "0.10"

# HTTP client (para Google Drive)
reqwest = { version = "0.12", features = ["json"] }
rand = "0.9.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
