[package]
name = "giro-desktop"
version = "1.0.51"
description = "GIRO - Sistema de Gestao Comercial para Varejo"
authors = ["Arkheion"]
license = "Proprietary"
repository = "https://github.com/jhonslife/GIRO"
edition = "2021"
rust-version = "1.75"

[lib]
name = "giro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "bigdecimal",
] }
bigdecimal = "0.4"
rust_decimal = { version = "1.34", features = ["serde"] }

# Hardware
serialport = "4.6"

# WebSocket (para scanner mobile)
tokio-tungstenite = "0.24"
futures-util = "0.3"

# mDNS Discovery (para mobile encontrar desktop)
mdns-sd = "0.11"

# JWT para sessões mobile
jsonwebtoken = "9.3"
base64 = "0.22"
hex = "0.4"

# System info (para mobile server)
sysinfo = "0.32"
dotenv = "0.15"


# Utilities
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
dirs = "5.0"

# Crypto (para backup)
aes-gcm = "0.10"
sha2 = "0.10"

# HTTP client (para Google Drive)
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
rand = "0.9.2"
argon2 = "0.4"
hmac = "0.12"
local-ip-address = "0.6.8"
hostname = "0.4"

# NFC-e / XML
quick-xml = { version = "0.31", features = ["serialize"] }
roxmltree = "0.19"
openssl = { version = "0.10", features = ["vendored"] }
x509-parser = "0.16"
qrcode = "0.14"
image = { version = "0.25", features = ["png", "ico"] }
regex = "1.10"
encoding_rs = "0.8"
sha1 = "0.10"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = false
